--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>Hola, Mundo Soy memo</div>
+    <div> 👽 Este es mi segundo ejercicio con Git 👽 </div>
 </body>
 </html>
