añadí párrafo a index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div> 👽 💀 ☠️ Este es mi segundo ejercicio con Git ☠️ 💀 👽 </div>
+    <div> 👽 💀 ☠️ ¡Git es genial! ☠️ 💀 👽 </div>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia incidunt at voluptatem tempore quam, saepe doloribus. Quae nulla error odio iste. Ullam in ratione dignissimos pariatur ab quidem amet blanditiis!</p>
 </body>
 </html>
