añadí una lista al index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
     <div> 👽 💀 ☠️ ¡Git es genial! ☠️ 💀 👽 </div>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia incidunt at voluptatem tempore quam, saepe doloribus. Quae nulla error odio iste. Ullam in ratione dignissimos pariatur ab quidem amet blanditiis!</p>
+
+    <ul>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+        <li>Añadir una lista 🖤</li>
+    </ul>
 </body>
 </html>
